If value for responseType defined as type that not supported, it should not throw an exception in XHR 2 https://bugs.webkit.org/show_bug.cgi?id=90976

Reviewed by Alexey Proskuryakov.

Source/WebCore:

http://www.w3.org/TR/XMLHttpRequest2/#the-responsetype-attribute
The spec does not say it should throw an exception when a non-supported
type is set, and other browsers do not throw it either.

Test: fast/xmlhttprequest/xmlhttprequest-responsetype-set-type.html

* xml/XMLHttpRequest.cpp:
(WebCore::XMLHttpRequest::setResponseType): Stop throwing an exception when non-supported type is given.

LayoutTests:

Adding tests to see if setting invalid responseType does not throw an exception and does not change the value.

* fast/xmlhttprequest/xmlhttprequest-responsetype-set-invalidtype-expected.txt: Added.
* fast/xmlhttprequest/xmlhttprequest-responsetype-set-invalidtype.html: Added.
* fast/xmlhttprequest/xmlhttprequest-responsetype-arraybuffer-expected.txt:
* fast/xmlhttprequest/xmlhttprequest-responsetype-arraybuffer.html: Removed a line which tries to set invalid type (since we now have a separate test)

Canonical link: https://commits.webkit.org/109652@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@123194 268f45cc-cd09-0410-ab3c-d52691b4dbfc